# data-infrastructure

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .terraform-docs.yml  .tflint.hcl  404.html  LICENSE  README.md  code-review.md  index.html  lpa_scraper.py  mkdocs.yml  naming-conventions.md  pyproject.toml  requirements-docs.txt  scprs_scraper.py  security.md  sqlfluff_pre_commit.py
.devcontainer/: devcontainer.json  profiles.yml
.devcontainer/jupyter/: Dockerfile  devcontainer.json
.github/workflows/: add-to-project.yml  build-image.yml  deploy.yml  docs.yml  pre-commit.yml  submit-job.yml  terraform-checks.yml  terraform-validation.yml
airflow/: .gitignore  aws_cli.py  deploy.sh
airflow/dags/: test.py
ci/: profiles.yml
cloud-infrastructure/: index.html
code-review/: index.html
codespaces/: index.html
dbt/: index.html
dbt-performance/: index.html
dbt/dbt/: index.html
dbt_docs_snowflake/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json  semantic_manifest.json
docs/: architecture.md  cloud-infrastructure.md  code-review.md  codespaces.md  dbt-performance.md  dbt.md  index.md  local-setup.md  naming-conventions.md  new-project-setup.md  security.md  setup.md  snowflake-account-setup.md  snowflake-project-setup.md  snowflake.md  writing-documentation.md
images/: Dockerfile  environment.yml
jobs/: __init__.py  test.py
naming-conventions/: index.html
new-project-setup/: index.html
search/: search_index.json
security/: index.html
setup/: ODI-Sentinel-SnowFlake-mainTemplate.json  index.html
snowflake/: index.html
terraform/: .gitignore  .terraform.lock.hcl  README.md  airflow.tf  batch.tf  ecr.tf  iam.tf  main.tf  network.tf  outputs.tf  s3.tf  variables.tf
transform/: .pre-commit-config.yaml  .sqlfluff  .sqlfluff-ci  README.md  dbt_project.yml  entities.sql  packages.yml  requirement.txt  requirements.txt
transform-bigquery/: .sqlfluff  README.md  dbt_project.yml  requirements.txt
writing-documentation/: index.html
(+313 files in other folders)
